@@ -1,3 +1,4 @@
+12/10/13 Solutions: flip indicator on pH meter
 12/10/13 adjust 'guide' size for graphs
 12/10/13 Solutions, Custom: move 'Reset All' button to left of beaker controls
 12/10/13 anchor beaker controls to right edge of beaker, so it grows left for i18n
